# easel

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  audio_test.easel  build_test.bat  default.easel  imgui.ini  make_shortcut.ps1
.claude/: settings.local.json
.github/workflows/: build.yml
.planning/notes/: 15_shader_specs.md  art_movement_canon.md  art_movement_shaders.md  auto_improvement_loop.md  shader_critique_pass1.md  shader_critique_pass2.md  shader_critique_pass3.md  shader_critique_pass4.md  state_of_realtime_2026.md
cmake/: FetchDependencies.cmake  MacOSXBundleInfo.plist.in
docs/: shader-library.md
projects/: etherea.easel
resources/: easel.rc  icon.icns
scripts/: codesign-app.sh  deploy-easel-firestore-rules.py  import-easel-shaders-firestore.py  publish-easel-shader.py  setup-codesign.sh
shaders/: NYC.fs  audio_diagnostic.fs  composite.frag  cornerpin.vert  display3d.frag  display3d.vert  edgeblend.frag  edges.fs  effect.frag  mask.frag  mask.vert  meshwarp.vert  objmesh.frag  objmesh.vert  passthrough.frag  passthrough.vert  shadow.frag  soph_orb.fs  volumetric_led.fs
shaders/particles/: render.frag  render.vert  update.frag
shaders/transitions/: dissolve_noise.fs  kaleido_smart.fs  pixelate.fs  wet_paint.fs
src/: main.cpp  main_mac.mm  test_shaders.cpp
src/app/: Application.cpp  Application.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioAnalyzer_mac.mm  AudioMixer.cpp  AudioMixer.h  BPMSync.cpp  BPMSync.h  DataBus.h  FileDialog_mac.mm  MIDIManager.cpp  MIDIManager.h  MIDIManager_mac.mm  NDIOutput.cpp  NDIOutput.h  OSCManager.cpp  OSCManager.h  OutputZone.cpp  OutputZone.h  ProjectorOutput.cpp  ProjectorOutput.h  ProjectorOutput_mac.mm  RTMPOutput.cpp  RTMPOutput.h  SceneManager.cpp  SceneManager.h  SpoutIO.cpp  SpoutIO.h  UndoStack.h  VideoRecorder.cpp  VideoRecorder.h  WindowChrome_mac.mm
src/compositing/: BlendMode.h  CompositeEngine.cpp  CompositeEngine.h  Layer.cpp  Layer.h  LayerEffect.h  LayerStack.cpp  LayerStack.h  MaskPath.cpp  MaskPath.h  MaskRenderer.cpp  MaskRenderer.h
src/net/: HttpClient.cpp  HttpClient.h
src/render/: Framebuffer.cpp  Framebuffer.h  GLTransition.cpp  GLTransition.h  Mesh.cpp  Mesh.h  Mesh3D.cpp  Mesh3D.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/scanning/: GrayCodePattern.cpp  GrayCodePattern.h  ScanPanel.cpp  ScanPanel.h  SceneScanner.cpp  SceneScanner.h  WebcamSource.cpp  WebcamSource.h
src/sources/: CaptureSource.cpp  CaptureSource.h  CaptureSource_mac.h  CaptureSource_mac.mm  ContentSource.h  ImageSource.cpp  ImageSource.h  NDIRuntime.cpp  NDIRuntime.h  NDISource.cpp  NDISource.h  ParticleSource.cpp  ParticleSource.h  ShaderClawBridge.cpp  ShaderClawBridge.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderSource.cpp  ShaderSource.h  VideoSource.cpp  VideoSource.h  WHEPSource.cpp  WHEPSource.h  WHEPSource_mac.mm  WindowCaptureSource.cpp  WindowCaptureSource.h  WindowCaptureSource_mac.h  WindowCaptureSource_mac.mm
src/speech/: CueClient.cpp  CueClient.h  EthereaClient.cpp  EthereaClient.h  SpeechBridge.cpp  SpeechBridge.h
src/stage/: StageView.cpp  StageView.h
src/timeline/: Timeline.cpp  Timeline.h
src/ui/: LayerPanel.cpp  LayerPanel.h  PropertyPanel.cpp  PropertyPanel.h  UIManager.cpp  UIManager.h  ViewportPanel.cpp  ViewportPanel.h  WarpEditor.cpp  WarpEditor.h
src/warp/: CornerPinWarp.cpp  CornerPinWarp.h  HomographyUtils.cpp  HomographyUtils.h  MeshWarp.cpp  MeshWarp.h  ObjMeshWarp.cpp  ObjMeshWarp.h
tests/: test_audio_analyzer.cpp  test_audio_e2e.cpp  test_scanning.cpp  test_wasapi_capture.cpp  test_whep_source.cpp
